<resources>
    <string name="app_name">WeCare</string>
    <string name="button">LOG IN</string>
    <string name="button2">REGISTER</string>
    <string name="title_activity_main2">WeCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WeCare</string>
    <string name="nav_header_subtitle">App that Cares</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About Us</string>
    <string name="tab_text_1">Notices</string>
    <string name="tab_text_2">Discuss</string>
    <string name="tab_text_3">Profile</string>
    <string name="user_name">UserName</string>
    <string name="pass_word">Password</string>
    <string name="rem">Remember Me</string>
    <string name="but">Login</string>
    <string name="newbut">Register</string>    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageView">Profile Photo</string>
    <string name="button3">Add Photo</string>
    <string name="input1">Name</string>
    <string name="rollno">Roll No</string>
    <string name="phnumber">Mobile No.</string>
    <string name="email">Email Id</string>
    <string name="hostelno">Hostel No.</string>
    <string name="roomno">Room No.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button4">SUBMIT</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_home">Notices</string>
    <string name="title_dashboard">Discussion</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_main3">WeCare</string>
    <string name="title_activity_main4">WeCare</string>
    <string name="title_activity_complaint">Register Complaint</string>
    <string name="title_activity_user_complaint">Register Complaint</string>
    <string name="Sel">Select your issue:</string>
    <string name="ava">Select Availability Time:</string>
    <string name="car">Carpenter</string>
    <string name="Desc">Describe your issue...</string>
    <string name="ele">Electrician</string>
    <string name="plu">LAN</string>
    <string name="Other">Other</string>
    <string name="comp">Would you like to receive notifications?</string>
    <string name="title_activity_profile_setting">Profile Settings</string>
    <string name="title_activity_parent">WeCare</string>

    <!-- Megaleio-->
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="password_again">Password Again</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender : </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="register_form_text">You need to fill up below register form.</string>
    <string name="no_field_can_be_empty">No field can be empty</string>
    <string name="passwords_must_be_the_same">Password and password again field must be the same</string>
    <string name="here_is_values">Here is values: %1$s</string>
    <string name="patient"> in need of a doctor</string>
    <string name="doctor"> a doctor</string>
    <string name="type">I am     </string>
    <string name="contact_no">Contact Number</string>
    <string name="agora_app_id">9846c1f6b9e94b5bbefa08c3f0ad2790</string>


</resources>
